<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ricwil.habit.MainActivity">

    <TextView
        android:id="@+id/create_new_task_instruction"
        style="@style/createObjectInstructionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_task_insruction_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_new_task_name"
        style="@style/createTaskInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_task_input_hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_task_instruction" />

    <Button
        android:id="@+id/create_task_button"
        style="@style/createTaskButton"
        android:text="@string/create_task_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_task_name" />


</androidx.constraintlayout.widget.ConstraintLayout>