...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/new_task_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_task_button"
...
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/new_task_button_margin"
        android:layout_marginEnd="@dimen/new_task_button_margin"
        android:text="@string/new_task_button_text"
        android:textSize="@dimen/new_task_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_tasks_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tasks_recycler_view" />

    <Button
        android:id="@+id/delete_tasks_button"
        android:layout_height="wrap_content"
...
